--- a/engineer.html
+++ b/engineer.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>WilliamLay - Home</title>
+		<title>WilliamLay - Engineer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -51,47 +51,32 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<header>
-								<h1>Welcome to WilliamLay.co.uk<br />
-								The online home of William J Lay
-								<!-- template designed by <a href="http://html5up.net">HTML5 UP</a>. --></h1>
-								<!-- <p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p> -->
-							</header>
-							<section class="tiles">
-								<article class="style1">
-									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
-									</span>
-									<a href="photographer.html">
-										<h2>Photographer</h2>
-										<div class="content">
-											<p>Event Photographer with large portfolio.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style2">
-									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
-									</span>
-									<a href="event_technician.html">
-										<h2>Event Technician</h2>
-										<div class="content">
-											<p>Lighting Tech and Sound Engineer for your Event.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
-									</span>
-									<a href="engineer.html">
-										<h2>Engineer</h2>
-										<div class="content">
-											<p>Electronic and Electrical Engineer specialising in Comms and Firmware.</p>
-										</div>
-									</a>
-								</article>
-							</section>
+							<h1>Engineer</h1>
+							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
+							<p>William is an Undergraduate Electronic & Electrical Engineer at the University of Bath, UK, specialising in Communications, silicon design, and firmware for FPGA and SoC platforms.</p>
+							<h2>Languages</h2>
+							<p>I am fluent or proficient in the following languages:</p>
+							<ul>
+								<li>VHDL</li>
+								<li>Verilog</li>
+								<li>SystemVerilog</li>
+								<li>MATLAB</li>
+								<li>TCL</li>
+							</ul>
+							<p>I am experienced in the following languages:</p>
+							<ul>
+								<li>SystemVerilog</li>
+								<li>Python (2.7 or 3.3)</li>
+								<li>C</li>
+								<li>Bash / Shell</li>
+								<li>L<sup>a</sup>T<sub>e</sub>x</li>
+							</ul>
+							<h2>Qualifications</h2>
+							<p>William holds the following current qualifications:</p>
+							<ul>
+								<li>Doulos Comprehensive Advanced VHDL</li>
+							</ul>
+							<p>References or example work is available on request.</p>
 						</div>
 					</div>
 
