--- a/event_technician.html
+++ b/event_technician.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>WilliamLay - Home</title>
+		<title>WilliamLay - Event Technician</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -51,47 +51,26 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<header>
-								<h1>Welcome to WilliamLay.co.uk<br />
-								The online home of William J Lay
-								<!-- template designed by <a href="http://html5up.net">HTML5 UP</a>. --></h1>
-								<!-- <p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p> -->
-							</header>
-							<section class="tiles">
-								<article class="style1">
-									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
-									</span>
-									<a href="photographer.html">
-										<h2>Photographer</h2>
-										<div class="content">
-											<p>Event Photographer with large portfolio.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style2">
-									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
-									</span>
-									<a href="event_technician.html">
-										<h2>Event Technician</h2>
-										<div class="content">
-											<p>Lighting Tech and Sound Engineer for your Event.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
-									</span>
-									<a href="engineer.html">
-										<h2>Engineer</h2>
-										<div class="content">
-											<p>Electronic and Electrical Engineer specialising in Comms and Firmware.</p>
-										</div>
-									</a>
-								</article>
-							</section>
+							<h1>Event Technician</h1>
+							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
+							<p>Primarily a Sound Engineer - Will is experienced in designing, setting up, and tuning systems in anything from a small pub, through to 3000 person halls. Familiar with both analogue and most digital consoles, mixing live and theatre are both regular activities.</p>
+							<p>I am most familiar with D&B Audiotechnik PA, having designed, installed and tuned numerous Y, Q, and E series systems over a 5 year period. Completely fluent in use of ArrayCalc, NoiseCalc and R1 Remote software to make maximum use of all features. If you require PA to be provided for your event I have contacts with various hire companies around the UK and can help arrange equipment to meet you or your client's needs.</p>
+							<p>Although primarily a Sound Engineer, William is also capable in the following areas:</p>
+							<ul>
+								<li>Lighting Design for theatre and live event.</li>
+								<li>Operating Avolites Pearl 2004/2008 and Avolites Titan consoles for Live.</li>
+								<li>Programming and operating ETC Eos Consoles for Theatre.</li>
+								<li>Power system design for live events.</li>
+								<li>Video infrastrucutre and output for Live or Theatre.</li>
+							</ul>
+							<h2>Qualifications</h2>
+							<p>William holds the following current qualifications:</p>
+							<ul>
+								<li>IPAF: 3a, 3b, PAV</li>
+								<li>Fire Awareness</li>
+								<li>PAT - Stage Electrics "for the Events Industry" course</li>
+							</ul>
+							<p>References or example work is available on request.</p>
 						</div>
 					</div>
 
