--- a/photographer.html
+++ b/photographer.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>WilliamLay - Home</title>
+		<title>WilliamLay - Photographer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -51,47 +51,16 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<header>
-								<h1>Welcome to WilliamLay.co.uk<br />
-								The online home of William J Lay
-								<!-- template designed by <a href="http://html5up.net">HTML5 UP</a>. --></h1>
-								<!-- <p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p> -->
-							</header>
-							<section class="tiles">
-								<article class="style1">
-									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
-									</span>
-									<a href="photographer.html">
-										<h2>Photographer</h2>
-										<div class="content">
-											<p>Event Photographer with large portfolio.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style2">
-									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
-									</span>
-									<a href="event_technician.html">
-										<h2>Event Technician</h2>
-										<div class="content">
-											<p>Lighting Tech and Sound Engineer for your Event.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
-									</span>
-									<a href="engineer.html">
-										<h2>Engineer</h2>
-										<div class="content">
-											<p>Electronic and Electrical Engineer specialising in Comms and Firmware.</p>
-										</div>
-									</a>
-								</article>
-							</section>
+							<h1>Photographer</h1>
+							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
+							<p>Experienced Event Photographer, working to capture memories - whether it is at a party, awards ceremony, or at a theatre show William is able to capture those moments so they can last you a lifetime.</p>
+							<p>Previous clients have included:</p>
+							<ul>
+								<li>Red Bull.</li>
+								<li>University of Bath Students' Union.</li>
+								<li>Swindon Comic Con.</li>
+							</ul>
+							<p>Large or small, any project is special and can be catered for with photos which will capture moments perfectly.</p>
 						</div>
 					</div>
 
