--- a/event_technician.html
+++ b/event_technician.html
@@ -24,7 +24,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">William J. Lay</span>
+									<span class="symbol"><img src="images/logo_small.jpg" alt="" /></span><span class="title">William J. Lay</span>
 								</a>
 
 							<!-- Nav -->
@@ -53,7 +53,7 @@
 						<div class="inner">
 							<h1>Event Technician</h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<p>Primarily a Sound Engineer - Will is experienced in designing, setting up, and tuning systems in anything from a small pub, through to 3000 person halls. Familiar with both analogue and most digital consoles, mixing live and theatre are both regular activities.</p>
+							<p>Primarily a Sound Engineer, Will is experienced in designing, setting up, and tuning systems in anything from a small pub, through to 3000 person halls. Familiar with both analogue and most digital consoles, mixing live and theatre are both regular activities.</p>
 							<p>I am most familiar with D&B Audiotechnik PA, having designed, installed and tuned numerous Y, Q, and E series systems over a 5 year period. Completely fluent in use of ArrayCalc, NoiseCalc and R1 Remote software to make maximum use of all features. If you require PA to be provided for your event I have contacts with various hire companies around the UK and can help arrange equipment to meet you or your client's needs.</p>
 							<p>Although primarily a Sound Engineer, William is also capable in the following areas:</p>
 							<ul>
