--- a/arcana/index.html
+++ b/arcana/index.html
@@ -6,6 +6,7 @@
 -->
 <html>
 	<head>
+		<a name="Top">
 		<title>WilliamLay - Home</title>
 		<!-- <link rel="shortcut icon" href="../assets/ico/favicon.ico"> -->
 		<meta charset="utf-8" />
@@ -24,7 +25,8 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo">William J. Lay<br><em>Engineer, Production Technician, Photographer</em></a></h1>
+						<h1><a href="index.html" id="logo">William J. Lay</a></h1>
+						<!-- <h1><a href="index.html" id="logo">William J. Lay<br><em>Engineer, Production Technician, Photographer</em></a></h1> -->
 
 					<!-- Nav -->
 						<nav id="nav">
@@ -55,7 +57,6 @@
 								<li><a href="#About">About</a></li>
 							</ul>
 						</nav>
-
 				</div>
 
 			<!-- Banner -->
@@ -67,14 +68,14 @@
 				</section> -->
 
 			<!-- CTA -->
-				<section id="cta" class="wrapper style3">
+<!-- 				<section id="cta" class="wrapper style3">
 					<div class="container">
-						<header>
-							<strong>Welcome to the online home of William J. Lay</strong>
-							<!-- <a href="#" class="button">Insert Coin</a> -->
+						<header class="minor">
+							<em>Welcome to the online home of William J. Lay</em>
+							<a href="#" class="button">Insert Coin</a>
 						</header>
 					</div>
-				</section>
+				</section> -->
 
 			<!-- Highlights -->
 				<section class="wrapper style1">
@@ -82,15 +83,15 @@
 						<div class="row 200%">
 							<section class="4u 12u(narrower)">
 								<div class="box highlight">
-									<a href="engineer.html" class="icon major fa-gears"><span class="label">Engineer</span></a>
+									<i class="icon major fa-gears"><span class="label">Engineer</span></i>
 									<h3><a href="engineer.html">Engineer</a></h3>
 									<p>Electronic and Electrical Engineer specialising in Communications technologies and Firmware for FPGA.</p>
-									<a class="image featured "><img src="images/fpga.jpg" alt="oops, something's missing!" /></a>
+									<a class="image fit"><img src="images/fpga.jpg" alt="oops, something's missing!" /></a>
 								</div>
 							</section>
 							<section class="4u 12u(narrower)">
 								<div class="box highlight">
-									<a href="engineer.html" class="icon major fa-wrench"><span class="label">Production Technician</span></a>
+									<i class="icon major fa-wrench"><span class="label">Production Technician</span></i>
 									<h3><a href="prod_tech.html">Production Technician</a></h3>
 									<p>Experienced live and theatre event Show Technical Manager, Lighting Technician and Sound Engineer.</p>
 									<a class="image featured"><img src="images/mixing_console.jpg" alt="oops, something's missing!" /></a>
@@ -140,13 +141,7 @@
 
 										<section>
 											<!-- <h3>Just a Subheading</h3> -->
-											<span class="image left"><img src="images/profile.jpg" alt="oops, where has the profile picture gone?!" /></span>
-											<!-- <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis et nisi etiam.</p -->
-											<footer>
-												<a href="#" class="button">Continue Reading</a>
-											</footer>
+											<span class="image fit"><img src="images/profile.jpg" alt="oops, where has the profile picture gone?!" /></span>
 										</section>
 
 								</div>
@@ -162,10 +157,9 @@
 											<!-- </header> -->
 
 											<!-- <span class="image featured"><img src="images/banner.jpg" alt="" /></span> -->
+											<span class="image inset_left"><img src="images/profile.jpg" alt="oops, where has the profile picture gone?!" /></span>
 
 											<p>Will was born and raised north of London in Hertforshire, UK, but now lives in Bath, UK, while studing for his Electronic & Electrical Engineering MEng degree at the University of Bath.</p>
-
-											<h3>And Yet Another Subheading</h3>
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
 											justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
 											ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
@@ -174,6 +168,9 @@
 											rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
 											Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
 											Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
+											<footer>
+												<a href="#Top" class="button">Back to Top</a>
+											</footer>
 
 											
 										</article>
