--- a/arcana/index.html
+++ b/arcana/index.html
@@ -11,7 +11,7 @@
 		<!-- <link rel="shortcut icon" href="../assets/ico/favicon.ico"> -->
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="description" itemprop="description" content="William Lay is an Engineer, Production Technician for Live and Theatre events, and a Photographer based in Bath, UK that specialises in unobtrusive event photography" />
+		<meta name="description" itemprop="description" content="William Lay is an Engineer, Production Technician for Live and Theatre events, and a Photographer based in Bath, UK." />
 		<meta name="keywords" itemprop="keywords" content="engineer, firmware engineer, electronic engineer, electronic and electrical engineer, electronic & electrical engineer, vhdl engineer, verilog engineer, systemverilog engineer, system verilog engineer, engineer in Bath, engineer near Bath, Bath engineer, Bath electronic engineer, event technician, production technician, live technician, live event technician, theatre technician, sound technician, sound engineer, lighting technician, event technician Bath, production technician Bath, photographer, event photographer, event photographer Bath, photographer Bath, event photographer near Bath, photographer near Bath, event photographer in Bath, photographer in Bath, Bath photographer, Bath event photographer" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -26,13 +26,12 @@
 
 					<!-- Logo -->
 						<h1><a href="index.html" id="logo">William J. Lay</a></h1>
-						<!-- <h1><a href="index.html" id="logo">William J. Lay<br><em>Engineer, Production Technician, Photographer</em></a></h1> -->
 
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
-<!-- 								<li>
+								<!-- <li>
 									<a href="#">Dropdown</a>
 									<ul>
 										<li><a href="#">Lorem dolor</a></li>
@@ -94,7 +93,7 @@
 									<i class="icon major fa-wrench"><span class="label">Production Technician</span></i>
 									<h3><a href="prod_tech.html">Production Technician</a></h3>
 									<p>Experienced live and theatre event Show Technical Manager, Lighting Technician and Sound Engineer.</p>
-									<a class="image featured"><img src="images/mixing_console.jpg" alt="oops, something's missing!" /></a>
+									<a class="image fit"><img src="images/mixing_console.jpg" alt="oops, something's missing!" /></a>
 								</div>
 							</section>
 							<section class="4u 12u(narrower)">
@@ -102,7 +101,7 @@
 									<i class="icon major fa-camera"></i>
 									<h3><a href="photographer.html">Photographer</a></h3>
 									<p>Experienced Photographer that specialises in unobtrusive event photography. Other work includes headshots, landscapes, and sport.</p>
-									<a class="image featured"><img src="images/lake.png" alt="oops, something's missing!" /></a>
+									<a class="image fit"><img src="images/lake.png" alt="oops, something's missing!" /></a>
 								</div>
 							</section>
 						</div>
@@ -120,11 +119,11 @@
 				</section> -->
 
 			<!-- CTA -->
-			<a name="About">
+			<a name="About"></a>
 				<section id="cta" class="wrapper style3">
 					<div class="container">
 						<header class="minor">
-							<h2></a>About Will</h2>
+							<h2>About Will</h2>
 							<!-- Q <a href="#" class="button">Insert Coin</a> -->
 						</header>
 					</div>
@@ -153,21 +152,15 @@
 										<article>
 											<!-- <header> -->
 												<!-- <h2>About Will</h2> -->
-												<!-- <p>Sidebar on the left, content on the right.</p> -->
 											<!-- </header> -->
 
 											<!-- <span class="image featured"><img src="images/banner.jpg" alt="" /></span> -->
-											<span class="image inset_left"><img src="images/profile.jpg" alt="oops, where has the profile picture gone?!" /></span>
+											<!-- <span class="image inset_left"><img src="images/profile.jpg" alt="oops, where has the profile picture gone?!" /></span> -->
 
 											<p>Will was born and raised north of London in Hertforshire, UK, but now lives in Bath, UK, while studing for his Electronic & Electrical Engineering MEng degree at the University of Bath.</p>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-											justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-											ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-											vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-											Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-											rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-											Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-											Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
+											<p>This website acts as a place for collecting together projects and work, and write a little about Will's work, hobbies, and any thing else deemed relevant!</p>
+											<p>Will's biggest hobby is supporting live and theatre events with <a href="http://www.bts-crew.com">Backstage Technical Services (BTS)</a> in Bath, and with <a href="http://www.hdos.org.uk">Hertford Dramatic & Operatic Society (HD&OS)</a> in Hertford. This hobby began aged 14 as Assistant Lighting Designer for a youth theatre production of "The Lion, The Witch, and The Wardrobe", which set the scene for the folowing years.</p>
+											<p>On the rare ocasion when Will is not studying, working behind the scenes, or is behind a camera, he also works as a Telethon Caller for the University of Bath Alumni Fund, helping to update Alumni on upcoming events and the progress of the University.</p>
 											<footer>
 												<a href="#Top" class="button">Back to Top</a>
 											</footer>
@@ -182,7 +175,7 @@
 				</section>
 
 			<!-- Posts -->
-				<section class="wrapper style1">
+				<!-- <section class="wrapper style1">
 					<div class="container">
 						<div class="row">
 							<section class="6u 12u(narrower)">
@@ -225,7 +218,7 @@
 							</section>
 						</div>
 					</div>
-				</section>
+				</section> -->
 
 			<!-- Footer -->
 				<div id="footer">
@@ -257,7 +250,11 @@
 							</section>
 							<section class="6u 12u(narrower)">
 								<h3>Get In Touch</h3>
-								<form>
+								<!-- <form
+								action="mailto:will@williamlay.co.uk"
+								method="POST"
+								enctype="multipart/form-data"
+								name="EmailTestForm">
 									<div class="row 50%">
 										<div class="6u 12u(mobilep)">
 											<input type="text" name="name" id="name" placeholder="Name" />
@@ -278,7 +275,7 @@
 											</ul>
 										</div>
 									</div>
-								</form>
+								</form> -->
 							</section>
 						</div>
 					</div>
