Arcana Version 1 Complete
Formatting and Content finished for Arcana rewrite.

--- a/arcana/index.html
+++ b/arcana/index.html
@@ -108,26 +108,26 @@
 					</div>
 				</section>
 
+
 			<!-- Gigantic Heading -->
-				<!-- <section class="wrapper style2">
+			<a name="About"></a>
+<!-- 				<section class="wrapper style3">
 					<div class="container">
 						<header class="major">
-							<h2><a name="About"></a>About Will</h2>
+							<h2>About Will</h2>
 							<p>With a much smaller subtitle hanging out just below it</p>
 						</header>
 					</div>
 				</section> -->
 
 			<!-- CTA -->
-			<a name="About"></a>
-				<section id="cta" class="wrapper style3">
+			<section id="cta" class="wrapper style3">
 					<div class="container">
 						<header class="minor">
 							<h2>About Will</h2>
-							<!-- Q <a href="#" class="button">Insert Coin</a> -->
 						</header>
 					</div>
-				</section> 
+			</section>  
 
 			<!-- Main -->
 				<section class="wrapper style1">
@@ -225,33 +225,26 @@
 					<div class="container">
 						<div class="row">
 							<section class="3u 6u(narrower) 12u$(mobilep)">
-								<h3>Links to Stuff</h3>
+								<h3>Quick Links</h3>
+								<i>WilliamLay.co.uk</i>
 								<ul class="links">
-									<li><a href="#">Mattis et quis rutrum</a></li>
-									<li><a href="#">Suspendisse amet varius</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan dolor</a></li>
-									<li><a href="#">Mattis rutrum accumsan</a></li>
-									<li><a href="#">Suspendisse varius nibh</a></li>
-									<li><a href="#">Sed et dapibus mattis</a></li>
+									<li><a href="index.html">Home</a></li>
+									<li><a href="engineer.html">Engineer</a></li>
+									<li><a href="prod_tech.html">Production Technician</a></li>
+									<li><a href="photographer.html">Photographer</a></li>
+									<li><a href="index.html/#About">About</a></li>
 								</ul>
 							</section>
 							<section class="3u 6u$(narrower) 12u$(mobilep)">
-								<h3>More Links to Stuff</h3>
-								<ul class="links">
-									<li><a href="#">Duis neque nisi dapibus</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan sed</a></li>
-									<li><a href="#">Mattis et sed accumsan</a></li>
-									<li><a href="#">Duis neque nisi sed</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum amet varius</a></li>
-								</ul>
+								<h3>Get In Touch</h3>
+								<p>Get in touch through the social platforms linked below, or through this contact form.</p>
 							</section>
 							<section class="6u 12u(narrower)">
-								<h3>Get In Touch</h3>
-								<!-- <form
-								action="mailto:will@williamlay.co.uk"
+								<!-- <h3>Get In Touch</h3>
+								<p>Get in touch through the social platforms linked below, or through this contact form.</p> -->
+								<p></p>
+								<form
+								action="mailto:laywill@gmail.com"
 								method="POST"
 								enctype="multipart/form-data"
 								name="EmailTestForm">
@@ -275,7 +268,7 @@
 											</ul>
 										</div>
 									</div>
-								</form> -->
+								</form>
 							</section>
 						</div>
 					</div>
@@ -292,7 +285,7 @@
 					<!-- Copyright -->
 						<div class="copyright">
 							<ul class="menu">
-								<li>&copy; William J. Lay 2016. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; William J. Lay 2016. All rights reserved</li><li>Template: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 
