--- a/arcana/engineer.html
+++ b/arcana/engineer.html
@@ -61,6 +61,7 @@
 					<div class="container">
 						<div class="row 200%">
 							<section class="2u">
+								<!-- <div class="box highlight"> -->
 								<div>
 									<i class="icon major fa-gears"><span class="label">Engineer</span></i>
 								</div>
@@ -69,7 +70,7 @@
 								<article>
 											<header>
 												<h2>Engineer</h2>
-												<p>William is an Undergraduate Electronic & Electrical Engineer at the University of Bath, UK, specialising in Communications, silicon design, and firmware for FPGA and SoC platforms.</p>
+												<p>William is an Electronic & Electrical Engineering student at the University of Bath, UK, specialising in Communications, silicon design, and firmware for FPGA and SoC.</p>
 											</header>
 								</article>
 							</section>
@@ -81,6 +82,11 @@
 						</div>
 					</div>
 				</section>
+
+			<!-- CTA -->
+			<a name="About"></a>
+				<section id="cta" class="wrapper style3">
+				</section> 
 
 			<!-- Main -->
 				<section class="wrapper style1">
@@ -97,7 +103,20 @@
 											</header> -->
 
 											<!-- <span class="image featured"><img src="images/banner.jpg" alt="" /></span> -->
-											<h2>Languages</h2>
+											
+											<!-- CTA_left -->
+											<a name="Languages"></a>
+												<section id="cta_left" class="wrapper style3">
+													<div class="container">
+														<header class="minor">
+															<h3>Languages</h3>
+															<!-- Q <a href="#" class="button">Insert Coin</a> -->
+														</header>
+													</div>
+												</section> 
+												<br>
+
+											<!-- <h2>Languages</h2> -->
 											<p>I am fluent or proficient in the following languages:</p>
 											<ul class="terminal">
 												<li>VHDL</li>
@@ -112,9 +131,21 @@
 												<li>Python (2.7 or 3.3)</li>
 												<li>C</li>
 												<li>Bash / Shell</li>
-												<li>L<sup>a</sup>T<sub>e</sub>x</li>
+												<li>L<sup>A</sup>T<sub>E</sub>X</li>
 											</ul>
-											<h2>Qualifications</h2>
+
+											<!-- CTA_left -->
+											<a name="Languages"></a>
+												<section id="cta_left" class="wrapper style3">
+													<div class="container">
+														<header class="minor">
+															<h3>Qualifications</h3>
+															<!-- Q <a href="#" class="button">Insert Coin</a> -->
+														</header>
+													</div>
+												</section> 
+												<br>
+											<!-- <h2>Qualifications</h2> -->
 											<p>William holds the following current qualifications:</p>
 											<ul class="chevron">
 												<li>Doulos Comprehensive Advanced VHDL</li>
@@ -126,34 +157,14 @@
 							</div>
 							<div class="4u 12u(narrower)">
 								<div id="sidebar">
-
 									<!-- Sidebar -->
-
 										<section>
-											<h3>Another Subtitle</h3>
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis et nisi etiam.</p>
-											<footer>
-												<a href="#" class="button">Continue Reading</a>
-											</footer>
+											<h3>Example Work</h3>
+											<p>Example work can always be provided from Will's portfolio. Exaples of technical documentation are available on request.</p>
+											<!-- <footer>
+												<a href="#Portfolio" class="button">Show Me</a>
+											</footer> -->
 										</section>
-
-										<section>
-											<h3>Another Subheading</h3>
-											<ul class="links">
-												<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-												<li><a href="#">Ornare in hendrerit in lectus</a></li>
-												<li><a href="#">Semper mod quis eget mi dolore</a></li>
-												<li><a href="#">Consequat etiam lorem phasellus</a></li>
-												<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-												<li><a href="#">Semper mod quisturpis nisi</a></li>
-											</ul>
-											<footer>
-												<a href="#" class="button">More Random Links</a>
-											</footer>
-										</section>
-
 								</div>
 							</div>
 						</div>
@@ -165,32 +176,29 @@
 					<div class="container">
 						<div class="row">
 							<section class="3u 6u(narrower) 12u$(mobilep)">
-								<h3>Links to Stuff</h3>
+								<h3>Quick Links</h3>
+								<i>WilliamLay.co.uk</i>
 								<ul class="links">
-									<li><a href="#">Mattis et quis rutrum</a></li>
-									<li><a href="#">Suspendisse amet varius</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan dolor</a></li>
-									<li><a href="#">Mattis rutrum accumsan</a></li>
-									<li><a href="#">Suspendisse varius nibh</a></li>
-									<li><a href="#">Sed et dapibus mattis</a></li>
+									<li><a href="index.html">Home</a></li>
+									<li><a href="engineer.html">Engineer</a></li>
+									<li><a href="prod_tech.html">Production Technician</a></li>
+									<li><a href="photographer.html">Photographer</a></li>
+									<li><a href="index.html/#About">About</a></li>
 								</ul>
 							</section>
 							<section class="3u 6u$(narrower) 12u$(mobilep)">
-								<h3>More Links to Stuff</h3>
-								<ul class="links">
-									<li><a href="#">Duis neque nisi dapibus</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan sed</a></li>
-									<li><a href="#">Mattis et sed accumsan</a></li>
-									<li><a href="#">Duis neque nisi sed</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum amet varius</a></li>
-								</ul>
+								<h3>Get In Touch</h3>
+								<p>Get in touch through the social platforms linked below, or through this contact form.</p>
 							</section>
 							<section class="6u 12u(narrower)">
-								<h3>Get In Touch</h3>
-								<!-- <form>
+								<!-- <h3>Get In Touch</h3>
+								<p>Get in touch through the social platforms linked below, or through this contact form.</p> -->
+								<p></p>
+								<form
+								action="mailto:laywill@gmail.com"
+								method="POST"
+								enctype="multipart/form-data"
+								name="EmailTestForm">
 									<div class="row 50%">
 										<div class="6u 12u(mobilep)">
 											<input type="text" name="name" id="name" placeholder="Name" />
@@ -211,7 +219,7 @@
 											</ul>
 										</div>
 									</div>
-								</form> -->
+								</form>
 							</section>
 						</div>
 					</div>
@@ -228,7 +236,7 @@
 					<!-- Copyright -->
 						<div class="copyright">
 							<ul class="menu">
-								<li>&copy; William J. Lay 2016. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; William J. Lay 2016. All rights reserved</li><li>Template: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 
