--- a/arcana/prod_tech.html
+++ b/arcana/prod_tech.html
@@ -82,6 +82,11 @@
 					</div>
 				</section>
 
+			<!-- CTA -->
+			<a name="About"></a>
+				<section id="cta" class="wrapper style3">
+				</section> 
+
 			<!-- Main -->
 				<section class="wrapper style1">
 					<div class="container">
@@ -127,27 +132,14 @@
 									<!-- Sidebar -->
 
 										<section>
-											<h3>Another Subtitle</h3>
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis et nisi etiam.</p>
+											<h3>Artist List</h3>
+											<p>William has worked with a wide variety of names, ranging from A list bands and DJs to international Dance groups.</p>
 											<footer>
-												<a href="#" class="button">Continue Reading</a>
-											</footer>
-										</section>
-
-										<section>
-											<h3>Another Subheading</h3>
-											<ul class="links">
-												<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-												<li><a href="#">Ornare in hendrerit in lectus</a></li>
-												<li><a href="#">Semper mod quis eget mi dolore</a></li>
-												<li><a href="#">Consequat etiam lorem phasellus</a></li>
-												<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-												<li><a href="#">Semper mod quisturpis nisi</a></li>
-											</ul>
-											<footer>
-												<a href="#" class="button">More Random Links</a>
+												<a href="#Bands" class="button">Show Me - Bands</a>
+												<p></p>
+												<a href="#DJs" class="button">Show Me - DJs </a>
+												<p></p>
+												<a href="#Theatre" class="button">Show Me - Theatre</a>
 											</footer>
 										</section>
 
@@ -181,6 +173,7 @@
 								<div id="content">
 									<!-- Content -->
 										<article>
+											<a name="Bands"></a>
 											<h3>Bands and Solo Artists</h3>
 											<ul class="chevron">
 												<li><a href="http://www.everything-everything.co.uk/"><strong>Everything Everything</strong></a></li>
@@ -191,6 +184,7 @@
 												<li><a href="http://www.coalitiontalent.com/artist/view/167/duke/">Duke</a></li>
 												<li><a href="http://www.chipshopboys.com/">The Chip Shop Boys</a></li>
 												<li><a href="http://jameshenton.co.uk/deps/">The Deps</a></li>
+												<li><a href="http://www.thebluesothers.com">The Blues Others</a></li>
 												<li><a href="http://www.thatjoannabradshaw.co.uk/">That Joanna Bradshaw</a></li>
 												<li><a href="http://www.the-new-ambassadors.co.uk/">The New Ambassadors</a></li>
 												<li><a href="http://www.minglemusic.co.uk/isaac-indiana/">Isaac Indiana</a></li>
@@ -204,6 +198,7 @@
 								<div id="content">
 									<!-- Content -->
 										<article>
+											<a name="DJs"></a>
 											<h3>DJs</h3>
 											<ul class="chevron">
 												<li><a href="https://www.facebook.com/zanelowe/"><strong>Zane Lowe</strong></li>
@@ -219,7 +214,7 @@
 												<li><a href="http://c2dj.com/misterbibby/">Mister Bibby</a></li>
 												<li><a href="http://www.facebook.com/DJMozafari/">Mozafari</a></li>
 												<li><a href="http://www.CredenceDJs.co.uk">The Credence DJs</a></li>
-												<li><a href="http://www.facebook.com/sean.diamond.dj/">DJ Sean Diamon</a></li>
+												<li><a href="http://www.facebook.com/sean.diamond.dj/">DJ Sean Diamond</a></li>
 											</ul>
 								</div>
 							</div>
@@ -228,10 +223,14 @@
 								<div id="content">
 									<!-- Content -->
 										<article>
+											<a name="Theatre"></a>
 											<h3>Theatre and Dance</h3>
 											<ul class="chevron">
 												<li><a href="http://www.akramkhancompany.net/productions/kaash/"><strong>Akram Khan Company - KAASH</strong></a></li>
 												<li><a href="http://www.joli-vyann.com/dance-and-theatre-company-performances/imbalance"><strong>Joli Vyann - Imbalance</strong></a></li>
+												<li><a href="http://www.3rdstagedance.com"><strong>3rd Stage Dance Company - Mementos - The Journey</strong></a></li>
+												<li><a href="http://www.icia.org.uk/">ICIA, University of Bath</a></li>
+												<li><a href="http://www.hdos.org.uk/">Hertford Dramatic & Operatic Society</a></li>
 											</ul>
 								</div>
 							</div>
@@ -243,32 +242,29 @@
 					<div class="container">
 						<div class="row">
 							<section class="3u 6u(narrower) 12u$(mobilep)">
-								<h3>Links to Stuff</h3>
+								<h3>Quick Links</h3>
+								<i>WilliamLay.co.uk</i>
 								<ul class="links">
-									<li><a href="#">Mattis et quis rutrum</a></li>
-									<li><a href="#">Suspendisse amet varius</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan dolor</a></li>
-									<li><a href="#">Mattis rutrum accumsan</a></li>
-									<li><a href="#">Suspendisse varius nibh</a></li>
-									<li><a href="#">Sed et dapibus mattis</a></li>
+									<li><a href="index.html">Home</a></li>
+									<li><a href="engineer.html">Engineer</a></li>
+									<li><a href="prod_tech.html">Production Technician</a></li>
+									<li><a href="photographer.html">Photographer</a></li>
+									<li><a href="index.html/#About">About</a></li>
 								</ul>
 							</section>
 							<section class="3u 6u$(narrower) 12u$(mobilep)">
-								<h3>More Links to Stuff</h3>
-								<ul class="links">
-									<li><a href="#">Duis neque nisi dapibus</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan sed</a></li>
-									<li><a href="#">Mattis et sed accumsan</a></li>
-									<li><a href="#">Duis neque nisi sed</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum amet varius</a></li>
-								</ul>
+								<h3>Get In Touch</h3>
+								<p>Get in touch through the social platforms linked below, or through this contact form.</p>
 							</section>
 							<section class="6u 12u(narrower)">
-								<h3>Get In Touch</h3>
-								<!-- <form>
+								<!-- <h3>Get In Touch</h3>
+								<p>Get in touch through the social platforms linked below, or through this contact form.</p> -->
+								<p></p>
+								<form
+								action="mailto:laywill@gmail.com"
+								method="POST"
+								enctype="multipart/form-data"
+								name="EmailTestForm">
 									<div class="row 50%">
 										<div class="6u 12u(mobilep)">
 											<input type="text" name="name" id="name" placeholder="Name" />
@@ -289,7 +285,7 @@
 											</ul>
 										</div>
 									</div>
-								</form> -->
+								</form>
 							</section>
 						</div>
 					</div>
@@ -306,7 +302,7 @@
 					<!-- Copyright -->
 						<div class="copyright">
 							<ul class="menu">
-								<li>&copy; William J. Lay 2016. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; William J. Lay 2016. All rights reserved</li><li>Template: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 
