--- a/engineer.html
+++ b/engineer.html
@@ -160,7 +160,7 @@
 									<!-- Sidebar -->
 										<section>
 											<h3>Example Work</h3>
-											<p>Example work can always be provided from Will's portfolio. Exaples of technical documentation are available on request.</p>
+											<p>Example work can always be provided from Will's portfolio. Examples of technical documentation are available on request.</p>
 											<!-- <footer>
 												<a href="#Portfolio" class="button">Show Me</a>
 											</footer> -->
