--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 								<div class="box highlight">
 									<i class="icon major fa-camera"></i>
 									<h3><a href="photographer.html">Photographer</a></h3>
-									<p>Experienced Photographer that specialises in unobtrusive event photography. Other work includes headshots, landscapes, and sport.</p>
+									<p>Experienced Photographer who specialises in unobtrusive event photography. Other work includes headshots, landscapes, and sport.</p>
 									<a class="image fit"><img src="images/lake.png" alt="oops, something's missing!" /></a>
 								</div>
 							</section>
@@ -157,9 +157,9 @@
 											<!-- <span class="image featured"><img src="images/banner.jpg" alt="" /></span> -->
 											<!-- <span class="image inset_left"><img src="images/profile.jpg" alt="oops, where has the profile picture gone?!" /></span> -->
 
-											<p>Will was born and raised north of London in Hertforshire, UK, but now lives in Bath, UK, while studing for his Electronic & Electrical Engineering MEng degree at the University of Bath.</p>
-											<p>This website acts as a place for collecting together projects and work, and write a little about Will's work, hobbies, and any thing else deemed relevant!</p>
-											<p>Will's biggest hobby is supporting live and theatre events with <a href="http://www.bts-crew.com">Backstage Technical Services (BTS)</a> in Bath, and with <a href="http://www.hdos.org.uk">Hertford Dramatic & Operatic Society (HD&OS)</a> in Hertford. This hobby began aged 14 as Assistant Lighting Designer for a youth theatre production of "The Lion, The Witch, and The Wardrobe", which set the scene for the folowing years.</p>
+											<p>Will was born and raised north of London in Hertforshire, UK, but now lives in Bath, UK, while studying for his Electronic & Electrical Engineering MEng degree at the University of Bath.</p>
+											<p>This website acts as a place for collecting together projects and work, and writing a little about Will's work, hobbies, and anything else deemed relevant!</p>
+											<p>Will's biggest hobby is supporting live and theatre events with <a href="http://www.bts-crew.com">Backstage Technical Services (BTS)</a> in Bath, and with <a href="http://www.hdos.org.uk">Hertford Dramatic & Operatic Society (HD&OS)</a> in Hertford. This hobby began aged 14 as Assistant Lighting Designer for a youth theatre production of "The Lion, The Witch, and The Wardrobe", which set the scene for the following years.</p>
 											<p>On the rare ocasion when Will is not studying, working behind the scenes, or is behind a camera, he also works as a Telethon Caller for the University of Bath Alumni Fund, helping to update Alumni on upcoming events and the progress of the University.</p>
 											<footer>
 												<a href="#Top" class="button">Back to Top</a>
