--- a/prod_tech.html
+++ b/prod_tech.html
@@ -69,7 +69,7 @@
 								<article>
 											<header>
 												<h2>Production Technician</h2>
-												<p>William is an experienced live event and theatre production Tehnician based in Bath, UK, particularly specialised in sound, lighting and show technincal management.</p>
+												<p>William is an experienced live event and theatre production Technician based in Bath, UK, particularly specialised in sound, lighting and show technical management.</p>
 											</header>
 								</article>
 							</section>
@@ -111,7 +111,7 @@
 												<li>Operating Avolites Pearl 2004/2008 and Avolites Titan consoles for Live.</li>
 												<li>Programming and operating ETC Eos Consoles for Theatre.</li>
 												<li>Power system design for live events.</li>
-												<li>Video infrastrucutre and output for Live or Theatre.</li>
+												<li>Video infrastructure and output for Live or Theatre.</li>
 											</ul>
 											<h2>Qualifications</h2>
 											<p>William holds the following current qualifications:</p>
