--- a/photographer.html
+++ b/photographer.html
@@ -69,7 +69,7 @@
 								<article>
 											<header>
 												<h2>Photographer</h2>
-												<p>William is an experienced photographer, that specialises in unobtrusive event photography. Other work includes headshots, landscapes, and sport.</p>
+												<p>William is an experienced photographer, who specialises in unobtrusive event photography. Other work includes headshots, landscapes, and sport.</p>
 											</header>
 								</article>
 							</section>
