Contact Form Fixed with JotForm
Added a JotForm and a Contact page. Removed broken PHP forms from bottom
of pages.

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<a name="Top">
-		<title>WilliamLay - Home</title>
+		<title>WilliamLay - Contact</title>
 		<!-- <link rel="shortcut icon" href="../assets/ico/favicon.ico"> -->
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -77,41 +77,36 @@
 					</div>
 				</section> -->
 
-			<!-- Highlights -->
-				<section class="wrapper style1">
+			<!-- Page Header -->
+				<section class="wrapper style2">
 					<div class="container">
 						<div class="row 200%">
-							<section class="4u 12u(narrower)">
-								<div class="box highlight">
-									<i class="icon major fa-gears"><span class="label">Engineer</span></i>
-									<h3><a href="engineer.html">Engineer</a></h3>
-									<p>Electronic and Electrical Engineer specialising in Communications technologies and Firmware for FPGA.</p>
-									<a class="image fit"><img src="images/fpga.jpg" alt="oops, something's missing!" /></a>
+							<section class="2u">
+								<!-- <div class="box highlight"> -->
+								<div>
+									<i class="icon major fa-envelope"><span class="label">Contact</span></i>
 								</div>
 							</section>
-							<section class="4u 12u(narrower)">
-								<div class="box highlight">
-									<i class="icon major fa-wrench"><span class="label">Production Technician</span></i>
-									<h3><a href="prod_tech.html">Production Technician</a></h3>
-									<p>Experienced live and theatre event Show Technical Manager, Lighting Technician and Sound Engineer.</p>
-									<a class="image fit"><img src="images/mixing_console.jpg" alt="oops, something's missing!" /></a>
-								</div>
+							<section class="6u 10u(narrower)">
+								<article>
+											<header>
+												<h2>Contact</h2>
+												<p>If you would like to get in touch for any reason, please fill in the form below, or contact me through the social platforms linked at the bottom of the page.</p>
+											</header>
+								</article>
 							</section>
-							<section class="4u 12u(narrower)">
-								<div class="box highlight">
-									<i class="icon major fa-camera"></i>
-									<h3><a href="photographer.html">Photographer</a></h3>
-									<p>Experienced Photographer who specialises in unobtrusive event photography. Other work includes headshots, landscapes, and sport.</p>
-									<a class="image fit"><img src="images/lake.png" alt="oops, something's missing!" /></a>
-								</div>
-							</section>
+							<!-- <section class="4u 4u(narrower)"> -->
+								<!-- <div> -->
+									<!-- <a class="image fit"><img src="images/fpga.jpg" alt="oops, something's missing!" /></a> -->
+								<!-- </div> -->
+							<!-- </section> -->
 						</div>
 					</div>
 				</section>
 
 
 			<!-- Gigantic Heading -->
-			<a name="About"></a>
+			<!-- <a name="Contact"></a> -->
 <!-- 				<section class="wrapper style3">
 					<div class="container">
 						<header class="major">
@@ -122,58 +117,20 @@
 				</section> -->
 
 			<!-- CTA -->
-			<section id="cta" class="wrapper style3">
+<!-- 				<section id="cta" class="wrapper style3">
 					<div class="container">
 						<header class="minor">
 							<h2>About Will</h2>
 						</header>
 					</div>
-			</section>  
-
+				</section>  
+ -->
 			<!-- Main -->
-				<section class="wrapper style1">
+				<!-- <section class="wrapper style1"> -->
 					<div class="container">
-						<div class="row 200%">
-							<div class="4u 12u(narrower)">
-								<div id="sidebar">
-
-									<!-- Sidebar -->
-
-										<section>
-											<!-- <h3>Just a Subheading</h3> -->
-											<span class="image fit"><img src="images/profile.jpg" alt="oops, where has the profile picture gone?!" /></span>
-										</section>
-
-								</div>
-							</div>
-							<div class="8u  12u(narrower) important(narrower)">
-								<div id="content">
-
-									<!-- Content -->
-										<article>
-											<!-- <header> -->
-												<!-- <h2>About Will</h2> -->
-											<!-- </header> -->
-
-											<!-- <span class="image featured"><img src="images/banner.jpg" alt="" /></span> -->
-											<!-- <span class="image inset_left"><img src="images/profile.jpg" alt="oops, where has the profile picture gone?!" /></span> -->
-
-											<p>Will was born and raised north of London in Hertforshire, UK, but now lives in Bath, UK, while studying for his Electronic & Electrical Engineering MEng degree at the University of Bath.</p>
-											<p>This website acts as a place for collecting together projects and work, and writing a little about Will's work, hobbies, and anything else deemed relevant!</p>
-											<p>Will's biggest hobby is supporting live and theatre events with <a href="http://www.bts-crew.com">Backstage Technical Services (BTS)</a> in Bath, and with <a href="http://www.hdos.org.uk">Hertford Dramatic & Operatic Society (HD&OS)</a> in Hertford. This hobby began aged 14 as Assistant Lighting Designer for a youth theatre production of "The Lion, The Witch, and The Wardrobe", which set the scene for the following years.</p>
-											<p>On the rare ocasion when Will is not studying, working behind the scenes, or is behind a camera, he also works as a Telethon Caller for the University of Bath Alumni Fund, helping to update Alumni on upcoming events and the progress of the University.</p>
-											<footer>
-												<a href="#Top" class="button">Back to Top</a>
-											</footer>
-
-											
-										</article>
-
-								</div>
-							</div>
-						</div>
+						<iframe id="JotFormIFrame-72573926506362" onload="window.parent.scrollTo(0,0)" allowtransparency="true" src="https://form.jotformeu.com/72573926506362" frameborder="0" style="width: 1px; min-width: 100%; height:539px; border:none;" scrolling="no"> </iframe> <script type="text/javascript"> var ifr = document.getElementById("JotFormIFrame-72573926506362"); if(window.location.href && window.location.href.indexOf("?") > -1) { var get = window.location.href.substr(window.location.href.indexOf("?") + 1); if(ifr && get.length > 0) { var src = ifr.src; src = src.indexOf("?") > -1 ? src + "&" + get : src + "?" + get; ifr.src = src; } } window.handleIFrameMessage = function(e) { var args = e.data.split(":"); if (args.length > 2) { iframe = document.getElementById("JotFormIFrame-" + args[2]); } else { iframe = document.getElementById("JotFormIFrame"); } if (!iframe) return; switch (args[0]) { case "scrollIntoView": iframe.scrollIntoView(); break; case "setHeight": iframe.style.height = args[1] + "px"; break; case "collapseErrorPage": if (iframe.clientHeight > window.innerHeight) { iframe.style.height = window.innerHeight + "px"; } break; case "reloadPage": window.location.reload(); break; } var isJotForm = (e.origin.indexOf("jotform") > -1) ? true : false; if(isJotForm && "contentWindow" in iframe && "postMessage" in iframe.contentWindow) { var urls = {"docurl":encodeURIComponent(document.URL),"referrer":encodeURIComponent(document.referrer)}; iframe.contentWindow.postMessage(JSON.stringify({"type":"urls","value":urls}), "*"); } }; if (window.addEventListener) { window.addEventListener("message", handleIFrameMessage, false); } else if (window.attachEvent) { window.attachEvent("onmessage", handleIFrameMessage); } </script>
 					</div>
-				</section>
+				<!-- </section> -->
 
 			<!-- Posts -->
 				<!-- <section class="wrapper style1">
@@ -239,7 +196,7 @@
 							</section>
 							<section class="3u 6u$(narrower) 12u$(mobilep)">
 								<h3>Get In Touch</h3>
-								<p>Get in touch through the social platforms linked below, or through the <a href="contact.html">Contact page</a>.</p>
+								<p>Get in touch through the social platforms linked below, or through this contact form.</p>
 							</section>
 							<section class="6u 12u(narrower)">
 							</section>
