--- a/engineer.html
+++ b/engineer.html
@@ -51,6 +51,7 @@
 								<li class="current"><a href="engineer.html"> Engineer </a></li>
 								<li><a href="prod_tech.html">Production Technician</a></li>
 								<li><a href="photographer.html">Photographer</a></li>
+								<li><a href="contact.html">Contact</a></li>
 								<li><a href="index.html#About">About</a></li>
 							</ul>
 						</nav>
@@ -183,43 +184,15 @@
 									<li><a href="engineer.html">Engineer</a></li>
 									<li><a href="prod_tech.html">Production Technician</a></li>
 									<li><a href="photographer.html">Photographer</a></li>
+									<li><a href="contact.html">Contact</a></li>
 									<li><a href="index.html/#About">About</a></li>
 								</ul>
 							</section>
 							<section class="3u 6u$(narrower) 12u$(mobilep)">
 								<h3>Get In Touch</h3>
-								<p>Get in touch through the social platforms linked below, or through this contact form.</p>
+								<p>Get in touch through the social platforms linked below, or through the <a href="contact.html">Contact page</a>.</p>
 							</section>
 							<section class="6u 12u(narrower)">
-								<!-- <h3>Get In Touch</h3>
-								<p>Get in touch through the social platforms linked below, or through this contact form.</p> -->
-								<p></p>
-								<form
-								action="mailto:laywill@gmail.com"
-								method="POST"
-								enctype="multipart/form-data"
-								name="EmailTestForm">
-									<div class="row 50%">
-										<div class="6u 12u(mobilep)">
-											<input type="text" name="name" id="name" placeholder="Name" />
-										</div>
-										<div class="6u 12u(mobilep)">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-									</div>
-									<div class="row 50%">
-										<div class="12u">
-											<textarea name="message" id="message" placeholder="Message" rows="5"></textarea>
-										</div>
-									</div>
-									<div class="row 50%">
-										<div class="12u">
-											<ul class="actions">
-												<li><input type="submit" class="button alt" value="Send Message" /></li>
-											</ul>
-										</div>
-									</div>
-								</form>
 							</section>
 						</div>
 					</div>
