--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,15 @@
 -->
 <html>
 	<head>
+		<!-- Global Site Tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-106572147-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments)};
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-106572147-1');
+		</script>
 		<a name="Top">
 		<title>WilliamLay - Contact</title>
 		<!-- <link rel="shortcut icon" href="../assets/ico/favicon.ico"> -->
